Fix 'Page Under Construction' message not showing

--- a/src/style.css
+++ b/src/style.css
@@ -27,7 +27,7 @@
 
 html {
   overflow: hidden;
-  height: 100vh;
+  height: 100dvh;
 }
 
 body {
@@ -116,8 +116,12 @@ main {
 
 /* stylelint-disable selector-class-pattern */
 .PUC {
+  scroll-snap-align: start;
+
   padding: var(--size-small);
+
   font-weight: bold;
   color: var(--color-base);
+
   background-color: var(--color-love);
 }
